<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="183dp"
        android:layout_height="159dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <RelativeLayout
        android:layout_width="408dp"
        android:layout_height="435dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/buttonAllGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/buttonAllGame" />

        <Button
            android:id="@+id/buttonCredit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonRandom"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/buttonCredit" />

        <Button
            android:id="@+id/buttonRandom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonFavorite"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/buttonRandom" />

        <Button
            android:id="@+id/buttonFavorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonAllGame"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/buttonFavorite" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>