<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/emptyTitle"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/buttonFavoriteDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonFavoriteDetail"
        android:layout_width="70dp"
        android:layout_height="87dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="#FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pngwing_com"
        tools:srcCompat="@drawable/pngwing_com" />

    <ImageView
        android:id="@+id/gameThumbnail"
        android:layout_width="231dp"
        android:layout_height="161dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFavoriteDetail"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameThumbnail">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:id="@+id/tvCategorie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="25"
                    android:text="@string/tvCategorie"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCategorieEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="75"
                    android:gravity="start|left"
                    android:text="@string/tvCategorieEdit" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:id="@+id/tvPublisher"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="25"
                    android:text="@string/tvPublisher"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPublisherEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="75"
                    android:text="@string/tvPublisherEdit" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:id="@+id/tvPlateforme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="25"
                    android:text="@string/tvPlateforme"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPlateformeEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="75"
                    android:text="@string/tvPlateformeEdit" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:text="@string/tvDescription"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDescriptionEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="75"
                    android:justificationMode="inter_word"
                    android:text="@string/tvDescriptionEdit" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/gameScreenshot1"
        android:layout_width="161dp"
        android:layout_height="158dp"
        android:alpha="0.5"
        android:background="#00000000"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gameThumbnail"
        app:layout_constraintTop_toTopOf="@+id/gameThumbnail"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/countScreenshot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/countScreenshot"
        app:layout_constraintBottom_toBottomOf="@+id/gameScreenshot1"
        app:layout_constraintEnd_toEndOf="@+id/gameScreenshot1"
        app:layout_constraintStart_toStartOf="@+id/gameScreenshot1"
        app:layout_constraintTop_toTopOf="@+id/gameScreenshot1" />

</androidx.constraintlayout.widget.ConstraintLayout>