<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/creditTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/titleCredit"
        android:textColor="#000000"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="#45ABB3"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creditTitle"
        app:layout_constraintVertical_bias="0.253">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="25dp"
            android:background="#00FFFFFF"
            android:text="@string/creditImage"
            android:textColor="#000000"
            android:textColorHighlight="#000000"
            android:textColorLink="#0E298A" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="0dp"
            android:layout_marginBottom="50dp"
            android:background="#00FFFFFF"
            android:text="@string/creditAPI"
            android:textColor="#000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:background="#00FFFFFF"
            android:text="@string/creditApplication"
            android:textColor="#000000"
            android:textColorHighlight="#000000"
            android:textColorLink="#0E298A" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>