<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/emptyTitle"
        app:layout_constraintEnd_toStartOf="@+id/buttonFavoriteDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonFavoriteDetail"
        android:layout_width="103dp"
        android:layout_height="87dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fullfavorite" />

    <ImageView
        android:id="@+id/gameThumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFavoriteDetail"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="423dp"
        android:layout_height="428dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameThumbnail"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/tvCategorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/tvCategorie"
            app:layout_constraintBottom_toTopOf="@+id/tvDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="64dp"
            android:layout_height="12dp"
            android:text="@string/tvDescription"
            app:layout_constraintStart_toStartOf="@+id/tvCategorie"
            app:layout_constraintTop_toTopOf="@+id/tvDescriptionEdit" />

        <TextView
            android:id="@+id/tvDescriptionEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="348dp"
            android:text="@string/tvDescriptionEdit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvCategorieEdit" />

        <TextView
            android:id="@+id/tvCategorieEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="224dp"
            android:text="@string/tvCategorieEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvCategorie" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/gameScreenshot2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        tools:layout_editor_absoluteX="327dp"
        tools:layout_editor_absoluteY="105dp"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/gameScreenshot1"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintStart_toStartOf="@+id/gameScreenshot3"
        app:layout_constraintTop_toTopOf="@+id/gameScreenshot2"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/gameScreenshot3"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/gameScreenshot4"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="233dp"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/gameScreenshot4"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/gameScreenshot2"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>